--- a/css/main.css
+++ b/css/main.css
@@ -716,12 +716,12 @@ ul {
   margin-right: 10px;
 }
 
-.section-portfolio {
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.portfolio-list {
+.portfolio__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -731,28 +731,15 @@ ul {
   margin-bottom: 50px;
 }
 
-.hero-portfolio-item:not(:last-child) {
+.portfolio__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.portfolio-btn-active {
+.portfolio-btn__active {
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   color: #ffffff;
   background-color: var(--header-logo);
-}
-
-.portfolio-btn:focus,
-.portfolio-btn:hover {
-  color: var(--header-logo);
-  cursor: pointer;
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.portfolio-btn:hover {
-  background: #2196f3;
-  color: var(--text-white);
 }
 
 .portfolio-btn {
@@ -771,22 +758,51 @@ ul {
   transition: box-shadow 250ms var(--timing-function), color 250ms var(--timing-function), background-color 250ms var(--timing-function), -webkit-box-shadow 250ms var(--timing-function);
 }
 
-.li-portfolio-item {
+.portfolio-btn:hover, .portfolio-btn:focus {
+  color: var(--header-logo);
+  cursor: pointer;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  background: #2196f3;
+  color: var(--text-white);
+}
+
+.hero-portfolio__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
+}
+
+.hero-portfolio__item {
   margin-right: 30px;
   background: #ffffff;
   width: calc(100% / 3 - 30px);
   margin-bottom: 30px;
+  border: 1px solid #eeeeee;
 }
 
-.li-portfolio-item:hover,
-.li-portfolio-item:focus {
+.hero-portfolio__item:focus, .hero-portfolio__item:hover {
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   display: block;
 }
 
-.portfolio-shadow {
+.hero-portfolio__item:hover .hero-portfolio__title {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.hero-portfolio__img {
+  position: relative;
+  overflow: hidden;
+}
+
+.hero-portfolio__link {
   margin: 0;
   padding: 0;
   -webkit-transition: -webkit-box-shadow 250ms var(--timing-function);
@@ -795,17 +811,7 @@ ul {
   transition: box-shadow 250ms var(--timing-function), -webkit-box-shadow 250ms var(--timing-function);
 }
 
-.hero-port-animation {
-  position: relative;
-  overflow: hidden;
-}
-
-.li-portfolio-item:hover .port-animation-text {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
-.port-animation-text {
+.hero-portfolio__title {
   position: absolute;
   top: 0;
   font-size: 18px;
@@ -824,21 +830,11 @@ ul {
   transition: transform 250ms var(--timing-function), -webkit-transform 250ms var(--timing-function);
 }
 
-.poster-hero {
-  margin-bottom: 4px;
+.portfolio__about {
+  padding: 20px 20px;
 }
 
-.hero-portfolio-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-right: -30px;
-  margin-bottom: -30px;
-}
-
-.portfolio-subtitle {
+.portfolio-about__subtitle {
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -847,14 +843,7 @@ ul {
   color: var(--header-link);
 }
 
-.container-port-div {
-  padding: 20px 24px;
-  border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-}
-
-.hero-portfolio-lead {
+.portfolio-about__lead {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
