--- a/sass/components/_nav-portfolio.scss
+++ b/sass/components/_nav-portfolio.scss
@@ -1,37 +1,25 @@
-.section-portfolio {
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.portfolio-list {
+.portfolio__list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
 
-.hero-portfolio-item:not(:last-child) {
+.portfolio__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.portfolio-btn-active {
+.portfolio-btn__active {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   color: #ffffff;
   background-color: var(--header-logo);
 }
 
-.portfolio-btn:focus,
-.portfolio-btn:hover {
-  color: var(--header-logo);
-  cursor: pointer;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.portfolio-btn:hover {
-  background: #2196f3;
-  color: var(--text-white);
-}
 .portfolio-btn {
   padding: 6px 22px;
   font-family: inherit;
@@ -44,4 +32,13 @@
   border-radius: 4px;
   transition: box-shadow 250ms var(--timing-function), color 250ms var(--timing-function),
     background-color 250ms var(--timing-function);
+  &:hover,
+  &:focus {
+    color: var(--header-logo);
+    cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    background: #2196f3;
+    color: var(--text-white);
+  }
 }
