--- a/sass/components/_direction.scss
+++ b/sass/components/_direction.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
 }
 
-.direction-title {
+.direction__title {
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
@@ -11,27 +11,27 @@
   color: var(--header-link);
   margin-bottom: 50px;
 }
-.direction-list {
+.direction__list {
   display: flex;
-  flex-wrap: wrap;
 }
-.direction-item {
+
+.direction__item {
   overflow: hidden;
   &:not(:last-child) {
     width: 370px;
     margin-right: 30px;
   }
-  &:hover .direction-text {
+  &:hover .direction-wrap__text {
     transform: translateY(0);
     transition: transform 250ms var(--timing-function);
   }
 }
 
-.direction-wrap-text {
+.direction-wrap {
   position: relative;
 }
 
-.direction-text {
+.direction-wrap__text {
   position: absolute;
   background: rgba(47, 48, 58, 0.8);
   bottom: 0;
