--- a/sass/components/_hero-portfolio.scss
+++ b/sass/components/_hero-portfolio.scss
@@ -10,6 +10,7 @@
   background: #ffffff;
   width: calc(100% / 3 - 30px);
   margin-bottom: 30px;
+  border: 1px solid #eeeeee;
   &:focus,
   &:hover {
     background: #ffffff;
@@ -17,24 +18,23 @@
       1px 4px 6px rgba(0, 0, 0, 0.16);
     display: block;
   }
-  &:hover .hero-portfolio__title {
+  &:hover .hero-portfolio-img__title {
     transform: translateY(0);
   }
-  border: 1px solid #eeeeee;
 }
 
-.hero-portfolio__img {
+.hero-portfolio-img {
   position: relative;
   overflow: hidden;
 }
 
-.hero-portfolio__link {
+.hero-portfolio-img__link {
   margin: 0;
   padding: 0;
   transition: box-shadow 250ms var(--timing-function);
 }
 
-.hero-portfolio__title {
+.hero-portfolio-img__title {
   position: absolute;
   top: 0;
   font-size: 18px;
@@ -49,7 +49,7 @@
   transition: transform 250ms var(--timing-function);
 }
 
-.portfolio__about {
+.portfolio-about {
   padding: 20px 20px;
 }
 
