--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -12,7 +12,7 @@
   background-position: center;
 }
 
-.hero-title {
+.hero__title {
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
@@ -31,7 +31,7 @@
   margin-bottom: 30px;
 }
 
-.hero-btn {
+.hero__btn {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
