--- a/sass/components/_nav-portfolio.scss
+++ b/sass/components/_nav-portfolio.scss
@@ -9,18 +9,18 @@
   margin-bottom: 50px;
 }
 
-.portfolio__item:not(:last-child) {
+.portfolio-item:not(:last-child) {
   margin-right: 8px;
 }
 
-.portfolio-btn__active {
+.portfolio-item__btn-active {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   color: #ffffff;
   background-color: var(--header-logo);
 }
 
-.portfolio-btn {
+.portfolio-item__btn {
   padding: 6px 22px;
   font-family: inherit;
   font-weight: 500;
