HW-7-rework-base

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,11 @@
 @import './utils/variables';
+@import './base/reset';
+@import './base/common';
+@import './utils/hidden';
 
+//components
+
+@import './components/container';
 @import './components/header';
 @import './components/hero';
 @import './components/advantages';
