HW-7-rework-button

--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,21 @@
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
+p,
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
 }
 
 .list {
@@ -24,8 +37,8 @@ a {
   text-decoration: none;
 }
 
-img {
-  display: block;
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
 .visually-hidden {
@@ -49,19 +62,6 @@ img {
   margin: 0 auto;
   /*
   outline: 2px solid red; */
-}
-
-p,
-h1,
-h2,
-h3,
-h4 {
-  margin: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
 }
 
 .header {
@@ -631,7 +631,7 @@ ul {
 }
 
 .footer-network__link:focus, .footer-network__link:hover {
-  background-color: #2196f3;
+  background-color: var(--header-logo);
   fill: #ffffff;
 }
 
@@ -697,7 +697,7 @@ ul {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  background-color: var(--header-logo);
+  background-color: #2196f3;
   color: #ffffff;
   border: transparent;
   cursor: pointer;
@@ -758,8 +758,8 @@ ul {
   cursor: pointer;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  background: #2196f3;
-  color: var(--text-white);
+  background-color: var(--header-logo);
+  color: white;
 }
 
 .hero-portfolio__list {
