--- a/sass/components/_nav-portfolio.scss
+++ b/sass/components/_nav-portfolio.scss
@@ -38,5 +38,7 @@
     cursor: pointer;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
+    background-color: var(--header-logo);
+    color: white;
   }
 }
